Dhis2 14853 default period (#13186)
* feat: default period is added if no periods are specified in the request [DHIS2-14853]

* feat: unit test added [DHIS2-14853]

* feat: unit test added [DHIS2-14853]