@@ -33,6 +33,7 @@ import static org.hisp.dhis.common.IdScheme.UID;
 import static org.hisp.dhis.common.OrganisationUnitSelectionMode.DESCENDANTS;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Date;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -49,6 +50,7 @@ import org.hisp.dhis.common.DimensionalItemObject;
 import org.hisp.dhis.common.DisplayProperty;
 import org.hisp.dhis.common.IdScheme;
 import org.hisp.dhis.common.OrganisationUnitSelectionMode;
+import org.hisp.dhis.organisationunit.OrganisationUnit;
 import org.hisp.dhis.program.Program;
 
 /**
@@ -94,7 +96,7 @@ public class CommonParams
      * List of sorting params.
      */
     @Builder.Default
-    private final List<AnalyticsSortingParams> orderParams = List.of( AnalyticsSortingParams.builder().build() );
+    private final List<AnalyticsSortingParams> orderParams = Collections.emptyList();
 
     /**
      * The coordinate fields to use as basis for spatial event analytics. The
@@ -102,25 +104,23 @@ public class CommonParams
      * order defines priority of geometry fields.
      */
     @Builder.Default
-    private final List<String> coordinateFields;
+    private final List<String> coordinateFields = Collections.emptyList();
 
     /**
      * The dimensional object for which to produce aggregated data.
      */
-    @Builder.Default
     private final DimensionalItemObject value;
 
     /**
      * Indicates which property to display.
      */
-    @Builder.Default
     private final DisplayProperty displayProperty;
 
     /**
      * The user's organization unit.
      */
     @Builder.Default
-    private final String userOrgUnit;
+    private final List<OrganisationUnit> userOrgUnit = Collections.emptyList();
 
     /**
      * The mode of selecting organisation units. Default is DESCENDANTS, meaning
@@ -142,49 +142,41 @@ public class CommonParams
     /**
      * Overrides the start date of the relative period. e.g: "2016-01-01".
      */
-    @Builder.Default
     private final Date relativePeriodDate;
 
     /**
      * Indicates if the metadata element should be omitted from the response.
      */
-    @Builder.Default
     private final boolean skipMeta;
 
     /**
      * Indicates if the data should be omitted from the response.
      */
-    @Builder.Default
     private final boolean skipData;
 
     /**
      * Indicates if the headers should be omitted from the response.
      */
-    @Builder.Default
     private final boolean skipHeaders;
 
     /**
      * Indicates if full precision should be provided for numeric values.
      */
-    @Builder.Default
     private final boolean skipRounding;
 
     /**
      * Indicates if full metadata details should be provided.
      */
-    @Builder.Default
     private final boolean includeMetadataDetails;
 
     /**
      * Indicates if organization unit hierarchy should be provided.
      */
-    @Builder.Default
     private final boolean hierarchyMeta;
 
     /**
      * Indicates if additional ou hierarchy data should be provided.
      */
-    @Builder.Default
     private final boolean showHierarchy;
 
     public List<DimensionIdentifier<DimensionParam>> getDimensionIdentifiers()
